# 01-rcli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cargo-generate.toml  cliff.toml  deny.toml  sig.hex  test.rest
assets/: test_base64_encoded.txt
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  http.rs  mod.rs  opts.rs  pass.rs  sign.rs
src/process/: base64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  sha256.rs
src/util/: io.rs  key.rs  mod.rs
tests/: sign_test.rs
