[package]
name = "rcli"
version = "0.1.0"
authors=["Mr.Rice"]
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rcli"  # 库名，必须与包名一致
path = "src/lib.rs"

[[bin]]
name = "rcli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
rand = "0.8.5"

# ✅ 必须添加 derive 特性
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"  # 如果需要 JSON 输出
serde_yml = "0.0.12"
