[package]
name = "rcli"
version = "0.1.0"
authors=["Mr.Rice"]
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rcli"  # 库名，必须与包名一致
path = "src/lib.rs"

[[bin]]
name = "rcli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.8.5"

# ✅ 必须添加 derive 特性
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"  # 如果需要 JSON 输出
serde_yml = "0.0.12"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "net", "fs", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zxcvbn = "3.1.0"

[dev-dependencies]
tempfile = "3.26.0"
